# PicoWOL

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.c
pcb_board/: README.md
pcb_board/case/: case.stl
pcb_board/kikad_project/: Pico_WOL-B_Cu.gbr  Pico_WOL-B_Mask.gbr  Pico_WOL-B_Paste.gbr  Pico_WOL-B_Silkscreen.gbr  Pico_WOL-Edge_Cuts.gbr  Pico_WOL-F_Cu.gbr  Pico_WOL-F_Mask.gbr  Pico_WOL-F_Paste.gbr  Pico_WOL-F_Silkscreen.gbr  Pico_WOL-NPTH.drl  Pico_WOL-PTH.drl  Pico_WOL-job.gbrjob  Pico_WOL.bak  Pico_WOL.kicad_pcb  Pico_WOL.kicad_prl  Pico_WOL.kicad_pro  Pico_WOL.kicad_sch  Pico_WOL.kicad_sym  fp-info-cache  sym-lib-table
src/: lwipopts.h  main.c
src/button/: button.c  button.h  configuration.h
src/display/: configuration.h
src/display/api/: command.c  command.h
src/display/bridge_PCF8574/: configuration.h
src/flash/: configuration.h  flash.c  flash.h  hw_config.c
src/flash/sd_card_impl/: configuration.h  sd_card_impl.h
src/wifi/: lwipopts.h  wifi.c  wifi.h
src/wol/: wol.c  wol.h
